@@ -69,9 +69,9 @@ WASM_SLOW_PATH_HIDDEN_DECL(call_indirect);
 WASM_SLOW_PATH_HIDDEN_DECL(call_indirect_no_tls);
 WASM_SLOW_PATH_HIDDEN_DECL(set_global_ref);
 
-extern "C" SlowPathReturnType slow_path_wasm_throw_exception(CallFrame*, const Instruction*, Wasm::Instance* instance, Wasm::ExceptionType);
-extern "C" SlowPathReturnType slow_path_wasm_popcount(const Instruction* pc, uint32_t);
-extern "C" SlowPathReturnType slow_path_wasm_popcountll(const Instruction* pc, uint64_t);
+extern "C" SlowPathReturnType slow_path_wasm_throw_exception(CallFrame*, const Instruction*, Wasm::Instance* instance, Wasm::ExceptionType) WTF_INTERNAL;
+extern "C" SlowPathReturnType slow_path_wasm_popcount(const Instruction* pc, uint32_t) WTF_INTERNAL;
+extern "C" SlowPathReturnType slow_path_wasm_popcountll(const Instruction* pc, uint64_t) WTF_INTERNAL;
 
 } } // namespace JSC::LLInt
 
