@@ -1,3 +1,10 @@
+2019-10-31  Yusuke Suzuki  <ysuzuki@apple.com>
+
+        Unreviewed, speculative GTK build fix r251886
+        https://bugs.webkit.org/show_bug.cgi?id=203703
+
+        * wasm/WasmSlowPaths.h:
+
 2019-10-31  Tadeu Zagallo  <tzagallo@apple.com>
 
         Fix GTK build after r251886
